# videoflow

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HN.md  LICENSE  README.md  ROADMAP.md  TODO.txt  Untitled.ipynb  docker-compose.yml  gpu.Dockerfile  publish.sh  pyproject.toml  setup.py  videoflow.code-workspace
.claude/docs/: ARCHITECTURE.md  DEPLOYMENT.md  NODE_CONTRACT.md
.github/workflows/: ci.yml  docs.yml
docker/: build-images.sh  user-image.example.Dockerfile
docker/base/: Dockerfile  Dockerfile.gpu
docker/basic/: Dockerfile
docker/video-io/: Dockerfile
docker/vision/: Dockerfile
docs/: .firebaserc  .gitignore  Makefile
docs/.firebase/: hosting.YnVpbGQvaHRtbA.cache
docs/public/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/public/_modules/: index.html
docs/public/_sources/: index.rst.txt
docs/public/computer-vision-recipes/: object-tracking-sample-application.html
docs/public/distributed/: deploying-to-kubernetes.html  distributed-execution.html  gpu-sharing.html  language-agnostic-components.html
docs/source/: conf.py  contents.rst  index.rst  requirements.txt
examples/: README.md  aggregators.py  car_tracking.py  custom_nodes.py  example_nodes.py  file_output.py  multicamera_time_sync.py  object_detector.ipynb  object_detector.py  object_tracking.py  output.avi  partitioned_processing.py  reading_livestream.py  simple_example1.py  simple_example2.py  simple_mp_example1.py  simple_mp_example2.py  state_save_example.py  stopping_flow.py  taskmodule_example.py  twelvelabs_pegasus.py
k8s/: nats.yaml
samples/: car_counting.py  simple_example.py
scripts/: build-docs.sh  gen-proto.sh
solutions/: README.md
solutions/toy_calculator/: Dockerfile  README.md  common.py  config.example.yaml  config.template.yaml  prepare.py  requirements.txt  toy_calculator.py  toy_calculator_nodes.py
solutions/toy_fusion/: Dockerfile  README.md  common.py  config.example.yaml  config.template.yaml  toy_fusion.py  toy_fusion_nodes.py
solutions/toy_router/: Dockerfile  README.md  common.py  config.example.yaml  config.template.yaml  prepare.py  toy_router.py  toy_router_nodes.py
spec/: DISTRIBUTION.md  PROTOCOL.md  README.md  conformance-map.md
spec/descriptor/: component-schema.json
spec/proto/: buf.gen.yaml  buf.yaml
spec/rfcs/: 0000-template.md  0001-v4-only-wire.md  0002-blob-refcount-reclamation.md
spec/vectors/: generate.py
temp/: pose.ipynb
tests/: support_nodes.py  test_ack_semantics.py  test_batch_lifecycle.py  test_blob_refcount.py  test_blob_store_registry.py  test_build.py  test_cluster.py  test_compile.py  test_compiler_manifests.py  test_component_descriptor.py  test_dag_algorithms.py  test_deployment_polish.py  test_downloader.py  test_eos_replicas.py  test_execution_engine.py  test_golden_vectors.py  test_gpu_allocations.py  test_gpu_lifecycle_cli.py  test_gpu_strategies.py  test_graph_engine.py  test_health.py  test_infra.py  test_k8s_watchdog.py  test_local_engine.py  test_localinfra.py  test_mounts.py  test_node_identity.py  test_nodes.py  test_oci.py  test_partitioning.py  test_payload_encoder_registry.py  test_ports_async_ctx.py  test_realtime_executionengine.py  test_release_resources.py  test_remote_component.py  test_run_local_cli.py  test_serialization.py  test_serialization_v4.py  test_shims.py  test_simple_examples.py  (+9 more)
tests/examples_tests/: test_simple_examples.py
tests/integration/: conftest.py  test_ack_semantics.py  test_blob_reclamation.py  test_eos_replicas.py  test_partitioning.py  test_ports_async_ctx.py  test_simple_examples.py  test_topology.py  test_toy_solutions.py  test_transport_semantics.py
tests/integration_tests/: integration_test.py
tests/resources_tests/: test_release_resources.py
todos/: 02_realtime-mode.md  03_solutions-testing-improvement.md  04_teardown.md  06_delayed_window_accumulation_process.md  07_gap_analysis.md  08_checkpointing of buffers.md  09_multi-gpu-components.md  bug-1.md  bug-2.md  deployment-process.md  gpu-sharing.md  microbatch-processors-idea.md  redis.md  small-ones.md
videoflow/: build.py  cli.py  cluster.py  compile.py  compiler.py  health.py  idempotency.py  image_registry.py  images.py  logging_config.py  manifests.py  oci.py  provision.py  serialization.py  solution.py  worker.py
videoflow/brokers/: zeromq.py
videoflow/components/: descriptor.py  oci.py
videoflow/consumers/: __init__.py  basic.py  consumer.py  video.py
videoflow/core/: __init__.py  allocation.py  bottlenecks.py  broker.py  compiler.py  constants.py  consumer.py  context.py  engine.py  environment.py  execution.py  flow.py  graph.py  logger.py  logging.py  messenger.py  node.py  policies.py  processor.py  producer.py  remote.py  state.py  stream.py  task.py
videoflow/deploy/: build.py  cli.py  cluster.py  compile.py  gpu.py  images.py  infra.py  localinfra.py  manifests.py  solution.py
videoflow/engines/: batch.py  kubernetes.py  local.py  realtime.py  task_functions.py  zeromq.py
videoflow/environments/: __init__.py  queues.py  zeromq.py
videoflow/messaging/: grouping.py  nats_messenger.py  topology.py
videoflow/messengers/: __init__.py  zeromq.py
videoflow/processors/: __init__.py  aggregators.py  basic.py  processor.py  tensorflow.py
videoflow/producers/: __init__.py  basic.py  producer.py  video.py
videoflow/runtime/: health.py  idempotency.py  logging_config.py  provision.py  worker.py
videoflow/utils/: downloader.py  generic_utils.py  graph.py  keras.py  parsers.py  plugins.py  system.py  tensorflow.py  transforms.py
videoflow/v1/: __init__.py  envelope_pb2.py  envelope_pb2.pyi  payloads_pb2.py  payloads_pb2.pyi  value_pb2.py  value_pb2.pyi
videoflow/wire/: serialization.py
white-paper/: .gitignore  Makefile  README.md
white-paper/paper/: paper_template.html
white-paper/results/: e1_serialization.json  e2_scaling.json  e3_depth.json  e4_overload.json  e5_join_scaling.json  e6_time_join.json  e7_payload_sweep.json  e8_fault_injection.json
(+215 files in other folders)
