[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videoflow"
dynamic = ["version"]
description = "Python framework for building distributed video and stream processing pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jadiel de Armas", email = "jadielam@gmail.com" }]
requires-python = ">=3.12"
# Core is deliberately lean: the graph model, serialization and worker runtime.
# Heavy or environment-specific dependencies live in optional-dependencies so each
# per-component Docker image installs only what its node family needs.
dependencies = [
    "numpy>=1.9.1",
    "six>=1.9.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/videoflow/videoflow"
Repository = "https://github.com/videoflow/videoflow"

[project.optional-dependencies]
# Broker client + wire format: needed by any node that actually runs in a
# distributed flow (i.e. every worker), but not to merely import/inspect a graph.
distributed = [
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
]
vision = [
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
    "opencv-python-headless>=4.0.0",
]
video = [
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
    "opencv-python-headless>=4.0.0",
]
# Used by the deploy CLI to render Kubernetes manifests, validate component
# descriptors, and push/pull them as OCI artifacts.
deploy = [
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
    "PyYAML>=5.1",
    "oras>=0.1",
    "jsonschema>=4.0",
]
# Optional external blob store for payloads over the inline size threshold.
blob = [
    "redis>=4.0.0",
]
all = [
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
    "opencv-python-headless>=4.0.0",
    "PyYAML>=5.1",
    "redis>=4.0.0",
    "requests>=2.22.0",
    "oras>=0.1",
    "jsonschema>=4.0",
]

[project.scripts]
videoflow = "videoflow.cli:main"

[dependency-groups]
# Everything needed to run the test suite and the checks locally (`uv sync`
# installs these).
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "protobuf>=4",
    "PyYAML>=5.1",
    "redis>=4.0.0",
    "opencv-python-headless>=4.0.0",
    "requests>=2.22.0",
    "mypy>=1.8",
    "ruff>=0.6",
    "pre-commit>=3.5",
    "types-PyYAML",
    "types-requests",
]

[tool.hatch.version]
# Single source of truth: reads __version__ from videoflow/version.py.
path = "videoflow/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videoflow"]

[tool.hatch.build.targets.sdist]
include = [
    "videoflow",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
markers = [
    "timeout: mark a test with a maximum run time (pytest-timeout).",
    # Applied automatically to everything under tests/integration/ by that
    # directory's conftest. These need a live NATS JetStream server; the pre-push
    # hook excludes them, so run them with `pytest tests/integration` (or
    # `pytest -m integration`) once a server is up.
    "integration: requires a reachable NATS JetStream server.",
]
filterwarnings = [
    # nats-py schedules a background flusher task that, in the short-lived
    # asyncio.run() helpers used by some integration tests, fires after the loop
    # has already closed. It's a teardown-only artifact of those test helpers (the
    # worker/messenger manage their own loop cleanly), so silence the noise.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
files = ["videoflow"]
# Generated protobuf modules — not ours to type-check or fix.
exclude = ["videoflow/v1/"]
# Third-party clients (nats, msgpack, redis, cv2) ship no type stubs; treat them as
# Any rather than failing on the missing imports.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
# Many signatures use `x: T = None` for optional args; allow it instead of churning
# every one into Optional[T].
implicit_optional = true
no_implicit_optional = false
# Validate the annotated signatures without diving into every dynamic function body:
# the codebase has intentionally dynamic spots (get_params introspection, nats/cv2
# interop) whose bodies aren't worth fighting the checker over.
check_untyped_defs = false
# A node's process()/consume() arity varies by parent count, so subclasses
# deliberately don't match the base signature (it's a positional-args-by-parent
# contract, not LSP substitutability). Don't flag those as override violations.
disable_error_code = ["override"]

[tool.ruff]
target-version = "py312"
line-length = 120
# videoflow/v1 is generated protobuf code (see spec/proto + scripts/gen-proto.sh):
# never lint or auto-fix it — ruff's F401 would strip the cross-proto imports that
# register dependencies in the descriptor pool, breaking a cold import of the wire.
extend-exclude = ["docs", "examples", "videoflow/v1"]
# force-exclude makes the excludes apply even to files pre-commit passes explicitly.
force-exclude = true

[tool.ruff.lint]
# Real-bug rules (pyflakes, bugbear, comprehensions), import sorting, and syntax
# errors — deliberately excluding whitespace/style rules that would fight the
# codebase's ``x : int`` annotation style.
select = ["E9", "F", "B", "C4", "I"]
ignore = [
    "B008",  # function call in default arg — used intentionally in a few places
    "E741",  # ambiguous var names (l/I) in existing math code
    "B905",  # zip() without strict= — the zipped sequences are known-equal-length
             # (usually asserted on the preceding line); matches videoflow-contrib's
             # ruff.toml. Only fires since target-version moved to py312.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
# Tests are held to a looser lint standard: construct-and-discard assertions (F841),
# blind pytest.raises(Exception) (B017), set/comprehension nitpicks (C4xx), and
# post-sys.path-insert imports (E402) are all fine in test code.
"tests/*" = ["F811", "E402", "F841", "B017", "C4"]
